# FFMPegDemo

./: README.md  ReadMe.mt  build.gradle  f00.txt  local.properties  settings.gradle  test  test2
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/lamer/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFmpegManager.cpp  FFmpegManager.h  FFmpegMusic.cpp  FFmpegMusic.h  FFmpegVideo.cpp  FFmpegVideo.h  PacketQueue.cpp  PacketQueue.h  VideoPicture.cpp  VideoPicture.h  VideoStatus.cpp  VideoStatus.h  ffmpeg_audio_handle.cpp  ffmpeg_handle.cpp  native-lib.cpp  recordSDK.c
app/src/main/cpp/ffplay/: FFManager.cpp  FFManager.h  cmdutils.c  cmdutils.h  config.h  ffplay.c  ffplay.h  ffplay2.c  ffplay2.h
app/src/main/cpp/ijkmedia/: CMakeLists.txt
app/src/main/cpp/ijkmedia/ijksdl/: CMakeLists.txt
app/src/main/cpp/ijkmedia/ijkyuv/: CMakeLists.txt
app/src/main/java/com/lamer/ffmpeg/: FFMpegApp.java  FFVideoView.java  MainActivity.java  Utils.java
app/src/main/java/com/test/ffmpegvideoplay/: MainActivity.java  Play.java  VideoView.java
app/src/main/java/com/test/ffmpegvideoplay/camera/: CameraView.java  CametaActivity.java  RecordVideoActivity.java
app/src/main/java/com/wangheart/rtmpfile/: CameraFFmpegPushRtmpActivity.java
app/src/main/java/com/wangheart/rtmpfile/camera_test/: Play.java  RecordVideoActivity.java
app/src/main/jniLibs/includes/libavutil/: avutil.h
app/src/main/jniLibs/includes/libffmpeg/: config.h
app/src/main/res/layout/: activity_camera11.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/lamer/ffmpeg/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
ijkplayer-example/: build.gradle
ijkplayer-exo/: build.gradle
ijkplayer-java/: build.gradle
